// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/popconfirm/demo/async.md extend context correctly 1`] = `
Array [
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Open Popconfirm with async logic
    </span>
  </button>,
  <div>
    <div
      class="ant-popover ant-popconfirm"
      style="opacity:0"
    >
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-arrow"
        >
          <span
            class="ant-popover-arrow-content"
          />
        </div>
        <div
          class="ant-popover-inner"
          role="tooltip"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="ant-popover-message"
            >
              <span
                aria-label="exclamation-circle"
                class="anticon anticon-exclamation-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="exclamation-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                  />
                </svg>
              </span>
              <div
                class="ant-popover-message-title"
              >
                Title
              </div>
            </div>
            <div
              class="ant-popover-buttons"
            >
              <button
                class="ant-btn ant-btn-default ant-btn-sm"
                type="button"
              >
                <span>
                  Cancel
                </span>
              </button>
              <button
                class="ant-btn ant-btn-primary ant-btn-sm"
                type="button"
              >
                <span>
                  OK
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders ./components/popconfirm/demo/basic.md extend context correctly 1`] = `
Array [
  <a
    href="#"
  >
    Delete
  </a>,
  <div>
    <div
      class="ant-popover ant-popconfirm"
      style="opacity:0"
    >
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-arrow"
        >
          <span
            class="ant-popover-arrow-content"
          />
        </div>
        <div
          class="ant-popover-inner"
          role="tooltip"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="ant-popover-message"
            >
              <span
                aria-label="exclamation-circle"
                class="anticon anticon-exclamation-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="exclamation-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                  />
                </svg>
              </span>
              <div
                class="ant-popover-message-title"
              >
                Are you sure to delete this task?
              </div>
            </div>
            <div
              class="ant-popover-buttons"
            >
              <button
                class="ant-btn ant-btn-default ant-btn-sm"
                type="button"
              >
                <span>
                  No
                </span>
              </button>
              <button
                class="ant-btn ant-btn-primary ant-btn-sm"
                type="button"
              >
                <span>
                  Yes
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders ./components/popconfirm/demo/dynamic-trigger.md extend context correctly 1`] = `
<div>
  <a
    href="#"
  >
    Delete a task
  </a>
  <div>
    <div
      class="ant-popover ant-popconfirm"
      style="opacity:0"
    >
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-arrow"
        >
          <span
            class="ant-popover-arrow-content"
          />
        </div>
        <div
          class="ant-popover-inner"
          role="tooltip"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="ant-popover-message"
            >
              <span
                aria-label="exclamation-circle"
                class="anticon anticon-exclamation-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="exclamation-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                  />
                </svg>
              </span>
              <div
                class="ant-popover-message-title"
              >
                Are you sure delete this task?
              </div>
            </div>
            <div
              class="ant-popover-buttons"
            >
              <button
                class="ant-btn ant-btn-default ant-btn-sm"
                type="button"
              >
                <span>
                  No
                </span>
              </button>
              <button
                class="ant-btn ant-btn-primary ant-btn-sm"
                type="button"
              >
                <span>
                  Yes
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <br />
  Whether directly execute：
  <button
    aria-checked="true"
    class="ant-switch ant-switch-checked"
    role="switch"
    type="button"
  >
    <div
      class="ant-switch-handle"
    />
    <span
      class="ant-switch-inner"
    />
  </button>
</div>
`;

exports[`renders ./components/popconfirm/demo/icon.md extend context correctly 1`] = `
Array [
  <a
    href="#"
  >
    Delete
  </a>,
  <div>
    <div
      class="ant-popover ant-popconfirm"
      style="opacity:0"
    >
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-arrow"
        >
          <span
            class="ant-popover-arrow-content"
          />
        </div>
        <div
          class="ant-popover-inner"
          role="tooltip"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="ant-popover-message"
            >
              <span
                aria-label="question-circle"
                class="anticon anticon-question-circle"
                role="img"
                style="color:red"
              >
                <svg
                  aria-hidden="true"
                  data-icon="question-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                  />
                  <path
                    d="M623.6 316.7C593.6 290.4 554 276 512 276s-81.6 14.5-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56.1 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.1 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0130.9-44.8c59-22.7 97.1-74.7 97.1-132.5.1-39.3-17.1-76-48.3-103.3zM472 732a40 40 0 1080 0 40 40 0 10-80 0z"
                  />
                </svg>
              </span>
              <div
                class="ant-popover-message-title"
              >
                Are you sure？
              </div>
            </div>
            <div
              class="ant-popover-buttons"
            >
              <button
                class="ant-btn ant-btn-default ant-btn-sm"
                type="button"
              >
                <span>
                  Cancel
                </span>
              </button>
              <button
                class="ant-btn ant-btn-primary ant-btn-sm"
                type="button"
              >
                <span>
                  OK
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders ./components/popconfirm/demo/locale.md extend context correctly 1`] = `
Array [
  <a
    href="#"
  >
    Delete
  </a>,
  <div>
    <div
      class="ant-popover ant-popconfirm"
      style="opacity:0"
    >
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-arrow"
        >
          <span
            class="ant-popover-arrow-content"
          />
        </div>
        <div
          class="ant-popover-inner"
          role="tooltip"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="ant-popover-message"
            >
              <span
                aria-label="exclamation-circle"
                class="anticon anticon-exclamation-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="exclamation-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                  />
                </svg>
              </span>
              <div
                class="ant-popover-message-title"
              >
                Are you sure？
              </div>
            </div>
            <div
              class="ant-popover-buttons"
            >
              <button
                class="ant-btn ant-btn-default ant-btn-sm"
                type="button"
              >
                <span>
                  No
                </span>
              </button>
              <button
                class="ant-btn ant-btn-primary ant-btn-sm"
                type="button"
              >
                <span>
                  Yes
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders ./components/popconfirm/demo/placement.md extend context correctly 1`] = `
<div
  class="demo"
>
  <div
    style="margin-left:70px;white-space:nowrap"
  >
    <button
      class="ant-btn ant-btn-default"
      type="button"
    >
      <span>
        TL
      </span>
    </button>
    <div>
      <div
        class="ant-popover ant-popconfirm"
        style="opacity:0"
      >
        <div
          class="ant-popover-content"
        >
          <div
            class="ant-popover-arrow"
          >
            <span
              class="ant-popover-arrow-content"
            />
          </div>
          <div
            class="ant-popover-inner"
            role="tooltip"
          >
            <div
              class="ant-popover-inner-content"
            >
              <div
                class="ant-popover-message"
              >
                <span
                  aria-label="exclamation-circle"
                  class="anticon anticon-exclamation-circle"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="exclamation-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                    />
                  </svg>
                </span>
                <div
                  class="ant-popover-message-title"
                >
                  Are you sure to delete this task?
                </div>
              </div>
              <div
                class="ant-popover-buttons"
              >
                <button
                  class="ant-btn ant-btn-default ant-btn-sm"
                  type="button"
                >
                  <span>
                    No
                  </span>
                </button>
                <button
                  class="ant-btn ant-btn-primary ant-btn-sm"
                  type="button"
                >
                  <span>
                    Yes
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ant-btn ant-btn-default"
      type="button"
    >
      <span>
        Top
      </span>
    </button>
    <div>
      <div
        class="ant-popover ant-popconfirm"
        style="opacity:0"
      >
        <div
          class="ant-popover-content"
        >
          <div
            class="ant-popover-arrow"
          >
            <span
              class="ant-popover-arrow-content"
            />
          </div>
          <div
            class="ant-popover-inner"
            role="tooltip"
          >
            <div
              class="ant-popover-inner-content"
            >
              <div
                class="ant-popover-message"
              >
                <span
                  aria-label="exclamation-circle"
                  class="anticon anticon-exclamation-circle"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="exclamation-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                    />
                  </svg>
                </span>
                <div
                  class="ant-popover-message-title"
                >
                  Are you sure to delete this task?
                </div>
              </div>
              <div
                class="ant-popover-buttons"
              >
                <button
                  class="ant-btn ant-btn-default ant-btn-sm"
                  type="button"
                >
                  <span>
                    No
                  </span>
                </button>
                <button
                  class="ant-btn ant-btn-primary ant-btn-sm"
                  type="button"
                >
                  <span>
                    Yes
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ant-btn ant-btn-default"
      type="button"
    >
      <span>
        TR
      </span>
    </button>
    <div>
      <div
        class="ant-popover ant-popconfirm"
        style="opacity:0"
      >
        <div
          class="ant-popover-content"
        >
          <div
            class="ant-popover-arrow"
          >
            <span
              class="ant-popover-arrow-content"
            />
          </div>
          <div
            class="ant-popover-inner"
            role="tooltip"
          >
            <div
              class="ant-popover-inner-content"
            >
              <div
                class="ant-popover-message"
              >
                <span
                  aria-label="exclamation-circle"
                  class="anticon anticon-exclamation-circle"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="exclamation-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                    />
                  </svg>
                </span>
                <div
                  class="ant-popover-message-title"
                >
                  Are you sure to delete this task?
                </div>
              </div>
              <div
                class="ant-popover-buttons"
              >
                <button
                  class="ant-btn ant-btn-default ant-btn-sm"
                  type="button"
                >
                  <span>
                    No
                  </span>
                </button>
                <button
                  class="ant-btn ant-btn-primary ant-btn-sm"
                  type="button"
                >
                  <span>
                    Yes
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="width:70px;float:left"
  >
    <button
      class="ant-btn ant-btn-default"
      type="button"
    >
      <span>
        LT
      </span>
    </button>
    <div>
      <div
        class="ant-popover ant-popconfirm"
        style="opacity:0"
      >
        <div
          class="ant-popover-content"
        >
          <div
            class="ant-popover-arrow"
          >
            <span
              class="ant-popover-arrow-content"
            />
          </div>
          <div
            class="ant-popover-inner"
            role="tooltip"
          >
            <div
              class="ant-popover-inner-content"
            >
              <div
                class="ant-popover-message"
              >
                <span
                  aria-label="exclamation-circle"
                  class="anticon anticon-exclamation-circle"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="exclamation-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                    />
                  </svg>
                </span>
                <div
                  class="ant-popover-message-title"
                >
                  Are you sure to delete this task?
                </div>
              </div>
              <div
                class="ant-popover-buttons"
              >
                <button
                  class="ant-btn ant-btn-default ant-btn-sm"
                  type="button"
                >
                  <span>
                    No
                  </span>
                </button>
                <button
                  class="ant-btn ant-btn-primary ant-btn-sm"
                  type="button"
                >
                  <span>
                    Yes
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ant-btn ant-btn-default"
      type="button"
    >
      <span>
        Left
      </span>
    </button>
    <div>
      <div
        class="ant-popover ant-popconfirm"
        style="opacity:0"
      >
        <div
          class="ant-popover-content"
        >
          <div
            class="ant-popover-arrow"
          >
            <span
              class="ant-popover-arrow-content"
            />
          </div>
          <div
            class="ant-popover-inner"
            role="tooltip"
          >
            <div
              class="ant-popover-inner-content"
            >
              <div
                class="ant-popover-message"
              >
                <span
                  aria-label="exclamation-circle"
                  class="anticon anticon-exclamation-circle"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="exclamation-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                    />
                  </svg>
                </span>
                <div
                  class="ant-popover-message-title"
                >
                  Are you sure to delete this task?
                </div>
              </div>
              <div
                class="ant-popover-buttons"
              >
                <button
                  class="ant-btn ant-btn-default ant-btn-sm"
                  type="button"
                >
                  <span>
                    No
                  </span>
                </button>
                <button
                  class="ant-btn ant-btn-primary ant-btn-sm"
                  type="button"
                >
                  <span>
                    Yes
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ant-btn ant-btn-default"
      type="button"
    >
      <span>
        LB
      </span>
    </button>
    <div>
      <div
        class="ant-popover ant-popconfirm"
        style="opacity:0"
      >
        <div
          class="ant-popover-content"
        >
          <div
            class="ant-popover-arrow"
          >
            <span
              class="ant-popover-arrow-content"
            />
          </div>
          <div
            class="ant-popover-inner"
            role="tooltip"
          >
            <div
              class="ant-popover-inner-content"
            >
              <div
                class="ant-popover-message"
              >
                <span
                  aria-label="exclamation-circle"
                  class="anticon anticon-exclamation-circle"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="exclamation-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                    />
                  </svg>
                </span>
                <div
                  class="ant-popover-message-title"
                >
                  Are you sure to delete this task?
                </div>
              </div>
              <div
                class="ant-popover-buttons"
              >
                <button
                  class="ant-btn ant-btn-default ant-btn-sm"
                  type="button"
                >
                  <span>
                    No
                  </span>
                </button>
                <button
                  class="ant-btn ant-btn-primary ant-btn-sm"
                  type="button"
                >
                  <span>
                    Yes
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="width:70px;margin-left:304px"
  >
    <button
      class="ant-btn ant-btn-default"
      type="button"
    >
      <span>
        RT
      </span>
    </button>
    <div>
      <div
        class="ant-popover ant-popconfirm"
        style="opacity:0"
      >
        <div
          class="ant-popover-content"
        >
          <div
            class="ant-popover-arrow"
          >
            <span
              class="ant-popover-arrow-content"
            />
          </div>
          <div
            class="ant-popover-inner"
            role="tooltip"
          >
            <div
              class="ant-popover-inner-content"
            >
              <div
                class="ant-popover-message"
              >
                <span
                  aria-label="exclamation-circle"
                  class="anticon anticon-exclamation-circle"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="exclamation-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                    />
                  </svg>
                </span>
                <div
                  class="ant-popover-message-title"
                >
                  Are you sure to delete this task?
                </div>
              </div>
              <div
                class="ant-popover-buttons"
              >
                <button
                  class="ant-btn ant-btn-default ant-btn-sm"
                  type="button"
                >
                  <span>
                    No
                  </span>
                </button>
                <button
                  class="ant-btn ant-btn-primary ant-btn-sm"
                  type="button"
                >
                  <span>
                    Yes
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ant-btn ant-btn-default"
      type="button"
    >
      <span>
        Right
      </span>
    </button>
    <div>
      <div
        class="ant-popover ant-popconfirm"
        style="opacity:0"
      >
        <div
          class="ant-popover-content"
        >
          <div
            class="ant-popover-arrow"
          >
            <span
              class="ant-popover-arrow-content"
            />
          </div>
          <div
            class="ant-popover-inner"
            role="tooltip"
          >
            <div
              class="ant-popover-inner-content"
            >
              <div
                class="ant-popover-message"
              >
                <span
                  aria-label="exclamation-circle"
                  class="anticon anticon-exclamation-circle"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="exclamation-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                    />
                  </svg>
                </span>
                <div
                  class="ant-popover-message-title"
                >
                  Are you sure to delete this task?
                </div>
              </div>
              <div
                class="ant-popover-buttons"
              >
                <button
                  class="ant-btn ant-btn-default ant-btn-sm"
                  type="button"
                >
                  <span>
                    No
                  </span>
                </button>
                <button
                  class="ant-btn ant-btn-primary ant-btn-sm"
                  type="button"
                >
                  <span>
                    Yes
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ant-btn ant-btn-default"
      type="button"
    >
      <span>
        RB
      </span>
    </button>
    <div>
      <div
        class="ant-popover ant-popconfirm"
        style="opacity:0"
      >
        <div
          class="ant-popover-content"
        >
          <div
            class="ant-popover-arrow"
          >
            <span
              class="ant-popover-arrow-content"
            />
          </div>
          <div
            class="ant-popover-inner"
            role="tooltip"
          >
            <div
              class="ant-popover-inner-content"
            >
              <div
                class="ant-popover-message"
              >
                <span
                  aria-label="exclamation-circle"
                  class="anticon anticon-exclamation-circle"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="exclamation-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                    />
                  </svg>
                </span>
                <div
                  class="ant-popover-message-title"
                >
                  Are you sure to delete this task?
                </div>
              </div>
              <div
                class="ant-popover-buttons"
              >
                <button
                  class="ant-btn ant-btn-default ant-btn-sm"
                  type="button"
                >
                  <span>
                    No
                  </span>
                </button>
                <button
                  class="ant-btn ant-btn-primary ant-btn-sm"
                  type="button"
                >
                  <span>
                    Yes
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin-left:70px;clear:both;white-space:nowrap"
  >
    <button
      class="ant-btn ant-btn-default"
      type="button"
    >
      <span>
        BL
      </span>
    </button>
    <div>
      <div
        class="ant-popover ant-popconfirm"
        style="opacity:0"
      >
        <div
          class="ant-popover-content"
        >
          <div
            class="ant-popover-arrow"
          >
            <span
              class="ant-popover-arrow-content"
            />
          </div>
          <div
            class="ant-popover-inner"
            role="tooltip"
          >
            <div
              class="ant-popover-inner-content"
            >
              <div
                class="ant-popover-message"
              >
                <span
                  aria-label="exclamation-circle"
                  class="anticon anticon-exclamation-circle"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="exclamation-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                    />
                  </svg>
                </span>
                <div
                  class="ant-popover-message-title"
                >
                  Are you sure to delete this task?
                </div>
              </div>
              <div
                class="ant-popover-buttons"
              >
                <button
                  class="ant-btn ant-btn-default ant-btn-sm"
                  type="button"
                >
                  <span>
                    No
                  </span>
                </button>
                <button
                  class="ant-btn ant-btn-primary ant-btn-sm"
                  type="button"
                >
                  <span>
                    Yes
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ant-btn ant-btn-default"
      type="button"
    >
      <span>
        Bottom
      </span>
    </button>
    <div>
      <div
        class="ant-popover ant-popconfirm"
        style="opacity:0"
      >
        <div
          class="ant-popover-content"
        >
          <div
            class="ant-popover-arrow"
          >
            <span
              class="ant-popover-arrow-content"
            />
          </div>
          <div
            class="ant-popover-inner"
            role="tooltip"
          >
            <div
              class="ant-popover-inner-content"
            >
              <div
                class="ant-popover-message"
              >
                <span
                  aria-label="exclamation-circle"
                  class="anticon anticon-exclamation-circle"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="exclamation-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                    />
                  </svg>
                </span>
                <div
                  class="ant-popover-message-title"
                >
                  Are you sure to delete this task?
                </div>
              </div>
              <div
                class="ant-popover-buttons"
              >
                <button
                  class="ant-btn ant-btn-default ant-btn-sm"
                  type="button"
                >
                  <span>
                    No
                  </span>
                </button>
                <button
                  class="ant-btn ant-btn-primary ant-btn-sm"
                  type="button"
                >
                  <span>
                    Yes
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ant-btn ant-btn-default"
      type="button"
    >
      <span>
        BR
      </span>
    </button>
    <div>
      <div
        class="ant-popover ant-popconfirm"
        style="opacity:0"
      >
        <div
          class="ant-popover-content"
        >
          <div
            class="ant-popover-arrow"
          >
            <span
              class="ant-popover-arrow-content"
            />
          </div>
          <div
            class="ant-popover-inner"
            role="tooltip"
          >
            <div
              class="ant-popover-inner-content"
            >
              <div
                class="ant-popover-message"
              >
                <span
                  aria-label="exclamation-circle"
                  class="anticon anticon-exclamation-circle"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="exclamation-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                    />
                  </svg>
                </span>
                <div
                  class="ant-popover-message-title"
                >
                  Are you sure to delete this task?
                </div>
              </div>
              <div
                class="ant-popover-buttons"
              >
                <button
                  class="ant-btn ant-btn-default ant-btn-sm"
                  type="button"
                >
                  <span>
                    No
                  </span>
                </button>
                <button
                  class="ant-btn ant-btn-primary ant-btn-sm"
                  type="button"
                >
                  <span>
                    Yes
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/popconfirm/demo/promise.md extend context correctly 1`] = `
Array [
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Open Popconfirm with Promise
    </span>
  </button>,
  <div>
    <div
      class="ant-popover ant-popconfirm"
      style="opacity:0"
    >
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-arrow"
        >
          <span
            class="ant-popover-arrow-content"
          />
        </div>
        <div
          class="ant-popover-inner"
          role="tooltip"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="ant-popover-message"
            >
              <span
                aria-label="exclamation-circle"
                class="anticon anticon-exclamation-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="exclamation-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                  />
                </svg>
              </span>
              <div
                class="ant-popover-message-title"
              >
                Title
              </div>
            </div>
            <div
              class="ant-popover-buttons"
            >
              <button
                class="ant-btn ant-btn-default ant-btn-sm"
                type="button"
              >
                <span>
                  Cancel
                </span>
              </button>
              <button
                class="ant-btn ant-btn-primary ant-btn-sm"
                type="button"
              >
                <span>
                  OK
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
